--- a/Day06_Student_Attendance_Merger/merge_etl.ipynb
+++ b/Day06_Student_Attendance_Merger/merge_etl.ipynb
@@ -204,7 +204,7 @@
    "id": "7afe5009",
    "metadata": {},
    "source": [
-    "#Step 7 – Save Output"
+    "Step 7 – Save Output"
    ]
   },
   {
