--- a/practice.ipynb
+++ b/practice.ipynb
@@ -166,6 +166,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b83acdd",
+   "metadata": {},
+   "source": [
+    "Sum of digits of a number\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "84b943f8",
@@ -186,6 +194,68 @@
     "    total += num % 10\n",
     "    num = num // 10\n",
     "print(total)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dddb8e8",
+   "metadata": {},
+   "source": [
+    "Count Digits of a number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ccd56c69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=1234\n",
+    "c=0\n",
+    "while num>0:\n",
+    "    c+=1\n",
+    "    num=num//10 \n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66be7360",
+   "metadata": {},
+   "source": [
+    "product of digits of a number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "426fe8dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=1234\n",
+    "p=1\n",
+    "while num>0:\n",
+    "    p=p*(num%10)\n",
+    "    num=num//10\n",
+    "print(p)"
    ]
   }
  ],
