--- a/practice.ipynb
+++ b/practice.ipynb
@@ -265,6 +265,40 @@
     "    num=num//10\n",
     "print(p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4bed2901",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def second_largest(nums):\n",
+    "    if len(nums) < 2:\n",
+    "        return None  # Not enough elements\n",
+    "    \n",
+    "    largest = second = float('-inf')\n",
+    "    \n",
+    "    for n in nums:\n",
+    "        if n > largest:\n",
+    "            second = largest\n",
+    "            largest = n\n",
+    "        elif n > second and n != largest:\n",
+    "            second = n\n",
+    "    \n",
+    "    return second\n",
+    "\n",
+    "# Example\n",
+    "print(second_largest([3, 8, 2, 7, 5]))\n"
+   ]
   }
  ],
  "metadata": {
