--- a/practice.ipynb
+++ b/practice.ipynb
@@ -299,6 +299,111 @@
     "# Example\n",
     "print(second_largest([3, 8, 2, 7, 5]))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f04be718",
+   "metadata": {},
+   "source": [
+    "1. Sum only odd digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7d99c2ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 5927\n",
+    "total = 0\n",
+    "\n",
+    "while num > 0:\n",
+    "    digit = num % 10\n",
+    "    if digit % 2 != 0:   # odd check\n",
+    "        total += digit\n",
+    "    num //= 10\n",
+    "\n",
+    "print(total)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa6fd635",
+   "metadata": {},
+   "source": [
+    "2. Count even digits\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7a645677",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 4823\n",
+    "count = 0\n",
+    "\n",
+    "while num > 0:\n",
+    "    digit = num % 10\n",
+    "    if digit % 2 == 0:   # even check\n",
+    "        count += 1\n",
+    "    num //= 10\n",
+    "\n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4343a4d",
+   "metadata": {},
+   "source": [
+    "3. Reverse only even digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bce2d84f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "284\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 4823\n",
+    "rev = 0\n",
+    "\n",
+    "while num > 0:\n",
+    "    digit = num % 10\n",
+    "    if digit % 2 == 0:\n",
+    "        rev = rev * 10 + digit\n",
+    "    num //= 10\n",
+    "\n",
+    "print(rev)\n"
+   ]
   }
  ],
  "metadata": {
