--- a/practice.ipynb
+++ b/practice.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8b0924f",
+   "id": "2dc5be37",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "493ba3ab",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "24668ad7",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,6 +403,201 @@
     "    num //= 10\n",
     "\n",
     "print(rev)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0bbbfa3",
+   "metadata": {},
+   "source": [
+    "4. Find max digit\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "106216e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 3849\n",
+    "maximum = 0\n",
+    "\n",
+    "while num > 0:\n",
+    "    digit = num % 10\n",
+    "    if digit > maximum:\n",
+    "        maximum = digit\n",
+    "    num //= 10\n",
+    "\n",
+    "print(maximum)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71068fe8",
+   "metadata": {},
+   "source": [
+    "Phase 3\n",
+    "1. PRIME NUMBER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e3f62b05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 29\n",
+    "is_prime = True\n",
+    "\n",
+    "if num < 2:\n",
+    "    is_prime = False\n",
+    "\n",
+    "i = 2\n",
+    "while i * i <= num:\n",
+    "    if num % i == 0:\n",
+    "        is_prime = False\n",
+    "        break\n",
+    "    i += 1\n",
+    "\n",
+    "print(is_prime)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7342f1d",
+   "metadata": {},
+   "source": [
+    "2️. ARMSTRONG NUMBER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b55cc81e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 153\n",
+    "temp = num\n",
+    "n = len(str(num))\n",
+    "total = 0\n",
+    "\n",
+    "while temp > 0:\n",
+    "    digit = temp % 10\n",
+    "    total += digit ** n\n",
+    "    temp //= 10\n",
+    "\n",
+    "print(total == num)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4aa018bd",
+   "metadata": {},
+   "source": [
+    "3️ STRONG NUMBER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "49f1903d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 145\n",
+    "temp = num\n",
+    "total = 0\n",
+    "\n",
+    "while temp > 0:\n",
+    "    digit = temp % 10\n",
+    "    \n",
+    "    # factorial\n",
+    "    fact = 1\n",
+    "    for i in range(1, digit + 1):\n",
+    "        fact *= i\n",
+    "    \n",
+    "    total += fact\n",
+    "    temp //= 10\n",
+    "\n",
+    "print(total == num)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5d218e4",
+   "metadata": {},
+   "source": [
+    "4. FIBONACCI SERIES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b68ff0ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 10\n",
+    "a, b = 0, 1\n",
+    "\n",
+    "for i in range(n):\n",
+    "    print(a)\n",
+    "    a, b = b, a + b\n",
+    "\n",
+    "\n",
+    "    "
    ]
   }
  ],
