--- a/practice.ipynb
+++ b/practice.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bce2d84f",
    "metadata": {},
    "outputs": [
@@ -397,6 +397,8 @@
     "rev = 0\n",
     "\n",
     "while num > 0:\n",
+    "\n",
+    "    \n",
     "    digit = num % 10\n",
     "    if digit % 2 == 0:\n",
     "        rev = rev * 10 + digit\n",
@@ -598,6 +600,135 @@
     "\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb9d4433",
+   "metadata": {},
+   "source": [
+    "1 — Print a Square of Stars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b52869a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * \n",
+      "* * * * \n",
+      "* * * * \n",
+      "* * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    for j in range(4):\n",
+    "        print(\"*\", end=\" \")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "247e35a3",
+   "metadata": {},
+   "source": [
+    "2 — Increasing Triangle\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d92d9629",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 5):\n",
+    "    for j in range(i):\n",
+    "        print(\"*\", end=\" \")\n",
+    "    print()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e6b0f24",
+   "metadata": {},
+   "source": [
+    "3 — Decreasing Triangle\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ed247348",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * \n",
+      "* * * \n",
+      "* * \n",
+      "* \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4, 0, -1):\n",
+    "    for j in range(i):\n",
+    "        print(\"*\", end=\" \")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d5722bb",
+   "metadata": {},
+   "source": [
+    "4 — Number Triangle\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "34f8b182",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "1 2 \n",
+      "1 2 3 \n",
+      "1 2 3 4 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 5):\n",
+    "    for j in range(1, i+1):\n",
+    "        print(j, end=\" \")\n",
+    "    print()\n"
    ]
   }
  ],
