--- a/practice.ipynb
+++ b/practice.ipynb
@@ -730,6 +730,48 @@
     "        print(j, end=\" \")\n",
     "    print()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5e7810b",
+   "metadata": {},
+   "source": [
+    "\n",
+    "5 — Reverse Number Triangle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a0a528",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(4, 0, -1):\n",
+    "    for j in range(1, i+1):\n",
+    "        print(j, end=\" \")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c295be3",
+   "metadata": {},
+   "source": [
+    "6 — Right-Aligned Triangle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a989822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 4\n",
+    "for i in range(1, n+1):\n",
+    "    print(\"  \" * (n - i) + \"* \" * i)\n"
+   ]
   }
  ],
  "metadata": {
