--- a/practice.ipynb
+++ b/practice.ipynb
@@ -772,6 +772,24 @@
     "for i in range(1, n+1):\n",
     "    print(\"  \" * (n - i) + \"* \" * i)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "121f80cf",
+   "metadata": {},
+   "source": [
+    "7 — Pyramid Pattern"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00d6d179",
+   "metadata": {},
+   "source": [
+    "n = 4\n",
+    "for i in range(1, n+1):\n",
+    "    print(\"  \" * (n - i) + \"* \" * (2*i - 1))\n"
+   ]
   }
  ],
  "metadata": {
