--- a/practice.ipynb
+++ b/practice.ipynb
@@ -742,10 +742,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "18a0a528",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 \n",
+      "1 2 3 \n",
+      "1 2 \n",
+      "1 \n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(4, 0, -1):\n",
     "    for j in range(1, i+1):\n",
@@ -763,10 +774,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4a989822",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      * \n",
+      "    * * \n",
+      "  * * * \n",
+      "* * * * \n"
+     ]
+    }
+   ],
    "source": [
     "n = 4\n",
     "for i in range(1, n+1):\n",
@@ -782,12 +804,56 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "00d6d179",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      * \n",
+      "    * * * \n",
+      "  * * * * * \n",
+      "* * * * * * * \n"
+     ]
+    }
+   ],
    "source": [
     "n = 4\n",
     "for i in range(1, n+1):\n",
+    "    print(\"  \" * (n - i) + \"* \" * (2*i - 1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46e59bee",
+   "metadata": {},
+   "source": [
+    "8 — Inverted Pyramid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "48f8c892",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * * * \n",
+      "  * * * * * \n",
+      "    * * * \n",
+      "      * \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 4\n",
+    "for i in range(n, 0, -1):\n",
     "    print(\"  \" * (n - i) + \"* \" * (2*i - 1))\n"
    ]
   }
