--- a/practice.ipynb
+++ b/practice.ipynb
@@ -856,6 +856,36 @@
     "for i in range(n, 0, -1):\n",
     "    print(\"  \" * (n - i) + \"* \" * (2*i - 1))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3f5fc1fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "*********\n",
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "for i in range(1, n+1):\n",
+    "    print(\" \"*(n-i) + \"*\"*i + \"*\"*(i-1))\n",
+    "for i in range(n-1, 0, -1):\n",
+    "    print(\" \"*(n-i) + \"*\"*i + \"*\"*(i-1))\n"
+   ]
   }
  ],
  "metadata": {
