--- a/practice.ipynb
+++ b/practice.ipynb
@@ -860,6 +860,30 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "96c761a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 \n",
+      "1 2 3 \n",
+      "1 2 \n",
+      "1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4, 0, -1):\n",
+    "    for j in range(1, i+1):\n",
+    "        print(j, end=\" \")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "3f5fc1fa",
    "metadata": {},
    "outputs": [
