--- a/practice.ipynb
+++ b/practice.ipynb
@@ -910,6 +910,38 @@
     "for i in range(n-1, 0, -1):\n",
     "    print(\" \"*(n-i) + \"*\"*i + \"*\"*(i-1))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f07ef0d9",
+   "metadata": {},
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "90555c4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nohtyp\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"python\"\n",
+    "rev = \"\"\n",
+    "\n",
+    "for i in range(len(s)-1, -1, -1):\n",
+    "    rev += s[i]\n",
+    "\n",
+    "print(rev)\n"
+   ]
   }
  ],
  "metadata": {
