--- a/practice.ipynb
+++ b/practice.ipynb
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "d92d9629",
    "metadata": {},
    "outputs": [
@@ -663,8 +663,7 @@
     "for i in range(1, 5):\n",
     "    for j in range(i):\n",
     "        print(\"*\", end=\" \")\n",
-    "    print()\n",
-    "\n"
+    "    print()\n"
    ]
   },
   {
@@ -883,6 +882,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "acddf894",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "3f5fc1fa",
    "metadata": {},
@@ -912,35 +919,52 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f07ef0d9",
-   "metadata": {},
-   "source": [
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "90555c4c",
+   "execution_count": null,
+   "id": "c9468bbe",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nohtyp\n"
+      "1 \n",
+      "1 2 \n",
+      "1 2 3 \n",
+      "1 2 3 4 \n"
      ]
     }
    ],
    "source": [
-    "s = \"python\"\n",
-    "rev = \"\"\n",
+    "for i in range(1, 5):\n",
+    "    for j in range(1,i+1 ):\n",
+    "        print(j, end=\" \")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "345d2c5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"education\"\n",
+    "count = 0\n",
     "\n",
-    "for i in range(len(s)-1, -1, -1):\n",
-    "    rev += s[i]\n",
+    "for ch in s:\n",
+    "    if ch in \"aeiouAEIOU\":\n",
+    "        count += 1\n",
     "\n",
-    "print(rev)\n"
+    "print(count)\n"
    ]
   }
  ],
