--- a/practice.ipynb
+++ b/practice.ipynb
@@ -966,6 +966,30 @@
     "\n",
     "print(count)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8398a46d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'p': 1, 'r': 2, 'o': 1, 'g': 2, 'a': 1, 'm': 2, 'i': 1, 'n': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"programming\"\n",
+    "freq = {}\n",
+    "\n",
+    "for ch in s:\n",
+    "    freq[ch] = freq.get(ch, 0) + 1\n",
+    "\n",
+    "print(freq)\n"
+   ]
   }
  ],
  "metadata": {
