--- a/practice.ipynb
+++ b/practice.ipynb
@@ -990,6 +990,39 @@
     "\n",
     "print(freq)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72f71c77",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b2eb7ffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ban\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"banana\"\n",
+    "result = \"\"\n",
+    "\n",
+    "for ch in s:\n",
+    "    if ch not in result:\n",
+    "        result += ch\n",
+    "\n",
+    "print(result)\n"
+   ]
   }
  ],
  "metadata": {
