--- a/Day06_Student_Attendance_Merger/merge_etl.ipynb
+++ b/Day06_Student_Attendance_Merger/merge_etl.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "45670aa6",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "1e928fc8",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "56a01225",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "2d286bce",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ee0cac5c",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
     "# Calculate performance score as a weighted sum of average_marks and attendance_percentage\n",
     "merged['performance_score'] = (0.7 * merged['average_marks']) + (0.3 * merged['attendance_percentage'])\n",
     "print(\"Final Performance Scores:\")  \n",
-    "print(merged[['name', 'performance_score']])0"
+    "print(merged[['name', 'performance_score']])"
    ]
   },
   {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "de6a7619",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "ce00f777",
    "metadata": {},
    "outputs": [
