--- a/practice.ipynb
+++ b/practice.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5e182449",
    "metadata": {},
    "outputs": [
@@ -1022,6 +1022,26 @@
     "        result += ch\n",
     "\n",
     "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "df9c6884",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Surya': 'name', 'Python': 'course', 'A': 'grade'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "student = {\"name\": \"Surya\", \"course\": \"Python\", \"grade\": \"A\"}\n",
+    "inverted = {v:k for k, v in student.items()}\n",
+    "print(inverted)\n"
    ]
   }
  ],
