--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1026,6 +1026,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "26535d82",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "df9c6884",
    "metadata": {},
@@ -1042,6 +1050,31 @@
     "student = {\"name\": \"Surya\", \"course\": \"Python\", \"grade\": \"A\"}\n",
     "inverted = {v:k for k, v in student.items()}\n",
     "print(inverted)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d05c276e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"education\"\n",
+    "count = 0\n",
+    "\n",
+    "for ch in s:\n",
+    "    if ch in \"aeiouAEIOU\":\n",
+    "        count += 1\n",
+    "\n",
+    "print(count)"
    ]
   }
  ],
