--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d05c276e",
    "metadata": {},
    "outputs": [
@@ -1075,6 +1075,30 @@
     "        count += 1\n",
     "\n",
     "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "09379391",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"python is very powerful\"\n",
+    "count = 0\n",
+    "\n",
+    "for word in s.split():\n",
+    "    count += 1\n",
+    "\n",
+    "print(count)\n"
    ]
   }
  ],
