--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1100,6 +1100,33 @@
     "\n",
     "print(count)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8bc6c43f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"swiss\"\n",
+    "freq = {}\n",
+    "\n",
+    "for ch in s:\n",
+    "    freq[ch] = freq.get(ch, 0) + 1\n",
+    "\n",
+    "for ch in s:\n",
+    "    if freq[ch] == 1:\n",
+    "        print(ch)\n",
+    "        break\n"
+   ]
   }
  ],
  "metadata": {
