--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1127,6 +1127,33 @@
     "        print(ch)\n",
     "        break\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3ac225bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "programming\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"python programming is very powerful\"\n",
+    "words = s.split()\n",
+    "\n",
+    "longest = \"\"\n",
+    "\n",
+    "for word in words:\n",
+    "    if len(word) > len(longest):\n",
+    "        longest = word\n",
+    "\n",
+    "print(longest)\n"
+   ]
   }
  ],
  "metadata": {
