--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1154,6 +1154,31 @@
     "\n",
     "print(longest)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5a721b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 145\n",
+    "temp = num\n",
+    "total = 0\n",
+    "\n",
+    "while temp > 0:\n",
+    "    digit = temp % 10\n",
+    "    \n",
+    "    # factorial\n",
+    "    fact = 1\n",
+    "    for i in range(1, digit + 1):\n",
+    "        fact *= i\n",
+    "    \n",
+    "    total += fact\n",
+    "    temp //= 10\n",
+    "\n",
+    "print(total == num)\n"
+   ]
   }
  ],
  "metadata": {
