--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1157,10 +1157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c5a721b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "num = 145\n",
     "temp = num\n",
@@ -1178,6 +1186,29 @@
     "    temp //= 10\n",
     "\n",
     "print(total == num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1396c683",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n=[1,2,2,3]\n",
+    "nums=list(set(n))\n",
+    "nums"
    ]
   }
  ],
