--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1210,6 +1210,29 @@
     "nums=list(set(n))\n",
     "nums"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e2d09c89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums=[1,3,2,5,7]\n",
+    "nums.sort()\n",
+    "nums[-2]"
+   ]
   }
  ],
  "metadata": {
