--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1233,6 +1233,37 @@
     "nums.sort()\n",
     "nums[-2]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8f96ff26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 29\n",
+    "is_prime = True\n",
+    "\n",
+    "if num < 2:\n",
+    "    is_prime = False\n",
+    "\n",
+    "i = 2\n",
+    "while i * i <= num:\n",
+    "    if num % i == 0:\n",
+    "        is_prime = False\n",
+    "        break\n",
+    "    i += 1\n",
+    "\n",
+    "print(is_prime)"
+   ]
   }
  ],
  "metadata": {
