--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1264,6 +1264,30 @@
     "\n",
     "print(is_prime)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "28da958f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "1 2 \n",
+      "1 2 3 \n",
+      "1 2 3 4 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 5):\n",
+    "    for j in range(1,i+1 ):\n",
+    "        print(j, end=\" \")\n",
+    "    print()\n"
+   ]
   }
  ],
  "metadata": {
