--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1288,6 +1288,29 @@
     "        print(j, end=\" \")\n",
     "    print()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3796cf79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=1234\n",
+    "p=1\n",
+    "while num>0:\n",
+    "    p=p*(num%10)\n",
+    "    num=num//10\n",
+    "print(p)"
+   ]
   }
  ],
  "metadata": {
