--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1311,6 +1311,29 @@
     "    num=num//10\n",
     "print(p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c4b72825",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=1234\n",
+    "c=0\n",
+    "while num>0:\n",
+    "    c+=1\n",
+    "    num=num//10 \n",
+    "print(c)"
+   ]
   }
  ],
  "metadata": {
