--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1336,6 +1336,33 @@
     "    num=num//10 \n",
     "print(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bf7db945",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 4823\n",
+    "count = 0\n",
+    "\n",
+    "while num > 0:\n",
+    "    digit = num % 10\n",
+    "    if digit % 2 == 0:   # even check\n",
+    "        count += 1\n",
+    "    num //= 10\n",
+    "\n",
+    "print(count)\n"
+   ]
   }
  ],
  "metadata": {
