--- a/practice.ipynb
+++ b/practice.ipynb
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "d92d9629",
    "metadata": {},
    "outputs": [
@@ -694,8 +694,8 @@
     }
    ],
    "source": [
-    "for i in range(4, 0, -1):\n",
-    "    for j in range(i):\n",
+    "for i in range(1, 5):\n",
+    "    for j in range(5-i):\n",
     "        print(\"*\", end=\" \")\n",
     "    print()\n"
    ]
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "34f8b182",
    "metadata": {},
    "outputs": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "18a0a528",
    "metadata": {},
    "outputs": [
@@ -759,9 +759,9 @@
     }
    ],
    "source": [
-    "for i in range(4, 0, -1):\n",
-    "    for j in range(1, i+1):\n",
-    "        print(j, end=\" \")\n",
+    "for i in range(1, 5):\n",
+    "    for j in range(1,5-i+1):  \n",
+    "        print(j, end=\" \") \n",
     "    print()\n"
    ]
   },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4a989822",
    "metadata": {},
    "outputs": [
@@ -783,10 +783,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "        \n",
       "      * \n",
       "    * * \n",
-      "  * * * \n",
-      "* * * * \n"
+      "  * * * \n"
      ]
     }
    ],
@@ -837,8 +837,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "48f8c892",
+   "execution_count": 15,
+   "id": "66931841",
    "metadata": {},
    "outputs": [
     {
@@ -856,512 +856,6 @@
     "n = 4\n",
     "for i in range(n, 0, -1):\n",
     "    print(\"  \" * (n - i) + \"* \" * (2*i - 1))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "96c761a6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 3 4 \n",
-      "1 2 3 \n",
-      "1 2 \n",
-      "1 \n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(4, 0, -1):\n",
-    "    for j in range(1, i+1):\n",
-    "        print(j, end=\" \")\n",
-    "    print()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acddf894",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "3f5fc1fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    *\n",
-      "   ***\n",
-      "  *****\n",
-      " *******\n",
-      "*********\n",
-      " *******\n",
-      "  *****\n",
-      "   ***\n",
-      "    *\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = 5\n",
-    "for i in range(1, n+1):\n",
-    "    print(\" \"*(n-i) + \"*\"*i + \"*\"*(i-1))\n",
-    "for i in range(n-1, 0, -1):\n",
-    "    print(\" \"*(n-i) + \"*\"*i + \"*\"*(i-1))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9468bbe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 \n",
-      "1 2 \n",
-      "1 2 3 \n",
-      "1 2 3 4 \n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(1, 5):\n",
-    "    for j in range(1,i+1 ):\n",
-    "        print(j, end=\" \")\n",
-    "    print()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "345d2c5a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = \"education\"\n",
-    "count = 0\n",
-    "\n",
-    "for ch in s:\n",
-    "    if ch in \"aeiouAEIOU\":\n",
-    "        count += 1\n",
-    "\n",
-    "print(count)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "8398a46d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'p': 1, 'r': 2, 'o': 1, 'g': 2, 'a': 1, 'm': 2, 'i': 1, 'n': 1}\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = \"programming\"\n",
-    "freq = {}\n",
-    "\n",
-    "for ch in s:\n",
-    "    freq[ch] = freq.get(ch, 0) + 1\n",
-    "\n",
-    "print(freq)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72f71c77",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b2eb7ffc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ban\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = \"banana\"\n",
-    "result = \"\"\n",
-    "\n",
-    "for ch in s:\n",
-    "    if ch not in result:\n",
-    "        result += ch\n",
-    "\n",
-    "print(result)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26535d82",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "df9c6884",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Surya': 'name', 'Python': 'course', 'A': 'grade'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "student = {\"name\": \"Surya\", \"course\": \"Python\", \"grade\": \"A\"}\n",
-    "inverted = {v:k for k, v in student.items()}\n",
-    "print(inverted)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d05c276e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = \"education\"\n",
-    "count = 0\n",
-    "\n",
-    "for ch in s:\n",
-    "    if ch in \"aeiouAEIOU\":\n",
-    "        count += 1\n",
-    "\n",
-    "print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "09379391",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = \"python is very powerful\"\n",
-    "count = 0\n",
-    "\n",
-    "for word in s.split():\n",
-    "    count += 1\n",
-    "\n",
-    "print(count)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "8bc6c43f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "w\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = \"swiss\"\n",
-    "freq = {}\n",
-    "\n",
-    "for ch in s:\n",
-    "    freq[ch] = freq.get(ch, 0) + 1\n",
-    "\n",
-    "for ch in s:\n",
-    "    if freq[ch] == 1:\n",
-    "        print(ch)\n",
-    "        break\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "3ac225bd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "programming\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = \"python programming is very powerful\"\n",
-    "words = s.split()\n",
-    "\n",
-    "longest = \"\"\n",
-    "\n",
-    "for word in words:\n",
-    "    if len(word) > len(longest):\n",
-    "        longest = word\n",
-    "\n",
-    "print(longest)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "c5a721b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "num = 145\n",
-    "temp = num\n",
-    "total = 0\n",
-    "\n",
-    "while temp > 0:\n",
-    "    digit = temp % 10\n",
-    "    \n",
-    "    # factorial\n",
-    "    fact = 1\n",
-    "    for i in range(1, digit + 1):\n",
-    "        fact *= i\n",
-    "    \n",
-    "    total += fact\n",
-    "    temp //= 10\n",
-    "\n",
-    "print(total == num)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "1396c683",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n=[1,2,2,3]\n",
-    "nums=list(set(n))\n",
-    "nums"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "e2d09c89",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nums=[1,3,2,5,7]\n",
-    "nums.sort()\n",
-    "nums[-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "8f96ff26",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "num = 29\n",
-    "is_prime = True\n",
-    "\n",
-    "if num < 2:\n",
-    "    is_prime = False\n",
-    "\n",
-    "i = 2\n",
-    "while i * i <= num:\n",
-    "    if num % i == 0:\n",
-    "        is_prime = False\n",
-    "        break\n",
-    "    i += 1\n",
-    "\n",
-    "print(is_prime)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "28da958f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 \n",
-      "1 2 \n",
-      "1 2 3 \n",
-      "1 2 3 4 \n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(1, 5):\n",
-    "    for j in range(1,i+1 ):\n",
-    "        print(j, end=\" \")\n",
-    "    print()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "3796cf79",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24\n"
-     ]
-    }
-   ],
-   "source": [
-    "num=1234\n",
-    "p=1\n",
-    "while num>0:\n",
-    "    p=p*(num%10)\n",
-    "    num=num//10\n",
-    "print(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "c4b72825",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "num=1234\n",
-    "c=0\n",
-    "while num>0:\n",
-    "    c+=1\n",
-    "    num=num//10 \n",
-    "print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "bf7db945",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "num = 4823\n",
-    "count = 0\n",
-    "\n",
-    "while num > 0:\n",
-    "    digit = num % 10\n",
-    "    if digit % 2 == 0:   # even check\n",
-    "        count += 1\n",
-    "    num //= 10\n",
-    "\n",
-    "print(count)\n"
    ]
   }
  ],
