--- a/practice.ipynb
+++ b/practice.ipynb
@@ -857,6 +857,117 @@
     "for i in range(n, 0, -1):\n",
     "    print(\"  \" * (n - i) + \"* \" * (2*i - 1))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6405e5a6",
+   "metadata": {},
+   "source": [
+    "# Phase 5 String Logic\n",
+    "\n",
+    "1. Reverse a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b59acce2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nohtyp\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"python\"\n",
+    "rev = \"\"\n",
+    "\n",
+    "for ch in range(len(s)-1, -1, -1):\n",
+    "    rev += s[ch]  \n",
+    "print(rev)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43ab4fea",
+   "metadata": {},
+   "source": [
+    "2. Count Vowels in a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "605628c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = \"education\"\n",
+    "c=0\n",
+    "\n",
+    "for ch in b:\n",
+    "    if ch in \"aeiouAEIOU\":\n",
+    "        c+=1\n",
+    "    \n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a32b0703",
+   "metadata": {},
+   "source": [
+    "3. Count Frequency of Characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "55b5eddf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'p': 1, 'r': 2, 'o': 1, 'g': 2, 'a': 1, 'm': 2, 'i': 1, 'n': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"programming\"\n",
+    "freq = {}\n",
+    "\n",
+    "\n",
+    "# for ch in s:    \n",
+    "#     if ch in freq:\n",
+    "#         freq[ch] += 1\n",
+    "#     else:\n",
+    "#         freq[ch] = 1\n",
+    "# print(freq)\n",
+    "\n",
+    "for ch in s:\n",
+    "    freq[ch] = freq.get(ch, 0) + 1\n",
+    "print(freq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a1703f3",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
