--- a/practice.ipynb
+++ b/practice.ipynb
@@ -965,8 +965,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a1703f3",
+   "id": "346fca97",
    "metadata": {},
+   "source": [
+    "4. Check Palindrome String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10bd86a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nohtyP\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=\"Python\"\n",
+    "rev=\"\"\n",
+    "for ch in n:\n",
+    "    rev = ch + rev\n",
+    "print(rev == n)\n",
+    "#print(rev)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bfdd368",
+   "metadata": {},
+   "source": [
+    "5. Count Frequency of Characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf4b4911",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
