--- a/practice.ipynb
+++ b/practice.ipynb
@@ -999,16 +999,35 @@
    "id": "4bfdd368",
    "metadata": {},
    "source": [
-    "5. Count Frequency of Characters"
+    "5.Find First Non-Repeating Character"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cf4b4911",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"swiss\"\n",
+    "freq = {}\n",
+    "\n",
+    "for ch in s:\n",
+    "    freq[ch] = freq.get(ch, 0) + 1\n",
+    "\n",
+    "for ch in s:\n",
+    "    if freq[ch] == 1:\n",
+    "        print(ch)\n",
+    "        break\n"
+   ]
   }
  ],
  "metadata": {
