--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1028,6 +1028,101 @@
     "        print(ch)\n",
     "        break\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "050a5409",
+   "metadata": {},
+   "source": [
+    "6. Remove Duplicates from String (Preserve Order)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "204db13a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ban\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=\"banana\"\n",
+    "d=\"\"\n",
+    "\n",
+    "for ch in b:\n",
+    "    if ch not in d:\n",
+    "        d += ch\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7e89c93",
+   "metadata": {},
+   "source": [
+    "7. Count Words in a Sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6e2c4b2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "w=\"Python is programming Language\"\n",
+    "c=0\n",
+    "\n",
+    "for ch in w.split():\n",
+    "    c+=1\n",
+    "print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "761f64d2",
+   "metadata": {},
+   "source": [
+    "8. Count consonants in a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b7e3bb3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "w=\"Grapes\"\n",
+    "c=0\n",
+    "\n",
+    "for ch in w:\n",
+    "    if ch not in \"aeiouAEIOU\":\n",
+    "        c+=1\n",
+    "print(c)"
+   ]
   }
  ],
  "metadata": {
