--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1123,6 +1123,38 @@
     "        c+=1\n",
     "print(c)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87f56d3d",
+   "metadata": {},
+   "source": [
+    "2. Find the longest word in a sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "053d2641",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "suryavanshi\n"
+     ]
+    }
+   ],
+   "source": [
+    "w=\"my name is suryavanshi gyaneshwar\"\n",
+    "l=\"\"\n",
+    "\n",
+    "for ch in w.split():\n",
+    "    if len(ch)>len(l):\n",
+    "        l=ch\n",
+    "print(l)\n"
+   ]
   }
  ],
  "metadata": {
