--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1155,6 +1155,30 @@
     "        l=ch\n",
     "print(l)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "36280732",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "w=\"Grapes\"\n",
+    "c=0\n",
+    "\n",
+    "for ch in w:\n",
+    "    if ch not in \"aeiouAEIOU\":\n",
+    "        c+=1\n",
+    "print(c)"
+   ]
   }
  ],
  "metadata": {
